[gd_scene load_steps=6 format=3 uid="uid://o7x8yw1x0qgp"]

[ext_resource type="Script" uid="uid://dfinva0yego5i" path="res://ui/settings/setting_range.gd" id="1_68xqx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f2pun"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_svlxn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_23qt5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1eh4c"]

[node name="SettingRange" type="Button"]
modulate = Color(0.6, 0.6, 0.6, 1)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 33.3333
grow_horizontal = 2
size_flags_vertical = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_f2pun")
theme_override_styles/hover = SubResource("StyleBoxEmpty_svlxn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_23qt5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1eh4c")
action_mode = 0
alignment = 0
script = ExtResource("1_68xqx")
setting_name = "(Name)"
setting_id = "dummy"
max_bound = 100
description = "(Description)"

[node name="Choice" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -11.6667
offset_bottom = 11.6667
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
